# SFML-Snake

./: .gitignore  CMakeLists.txt  README.md  buildandstart.sh  configure.sh  perf.data  perf.data.old
include/: AssetHandler.hpp  Button.hpp  Player.hpp  Screen.hpp  SnakeConfig.hpp  SnakeController.hpp  SnakeGameRenderer.hpp  SnakeModel.hpp  TextureHandler.hpp  fruit.hpp  grid.hpp  player.hpp  utility.hpp  world.hpp
src/: AssetHandler.cpp  Button.cpp  Player.cpp  Screen.cpp  SnakeController.cpp  SnakeGameRenderer.cpp  SnakeModel.cpp  TextureHandler.cpp  fruit.cpp  grid.cpp  grid.hpp  main.cpp  movement.cpp  movement.hpp  player.cpp  player.hpp  utility.cpp  utility.hpp  world.cpp
